 ! API: StackDockComponent has now a custom listener instead of the generic ChangeListener
 ! API: ScreenDockStation can now move a window when grabbed at its only tab
 - Bugfix: Icons of size 0/0 should no longer produce an exception in DockUtilities.disabledIcon
 - Bugfix: GlassedPane now emulates "fall through" behavior for MouseEvents
 - API: Added three new extensions, Toolbar, Toolbar-Common and Toolbar-Tutorial. This includes new DockStations, new Tutorials, and a lot new configurations.
 - Bugfix: vertical OrientedLabel did not paint text at the correct location, making the text invisible

[v1.1.1p8a]
 - API: new tutorial for WizardSplitDockStation
 - Bugfix: Eclipse-tabs without actions did not show the entire text even if there was enough space
  
[v1.1.1p8b]
 - Bugfix: Icon of ButtonCombinedMenu did not show up when the mouse hovered over the button.
 - Bugfix: When changing the DockTheme, the "hold" (also known as "sticky") action of the FlapDockStation did disappear.
 ! API: removed the deprecated ComponentDockable
 - API: added MenuLineLayoutStrategy, allows clients to more easily fine tune the behavior of MenuLineLayout
 - Bugfix: If the Toolbar Extension is installed, creating perspectives did throw an exception. Instead a warning is now printed.
 - API: CPerspective now also stores invisible children
 - API: AbstractCDockablePerspective offers method "remove", which stores the location of the dockable and then removes it from its parent.
  
[v1.1.1p8c]
 - API: Added support for the perspective API to the Toolbar Extension
 - Bugfix: Binary format for permanent layout storage has been broken

[v1.1.1p8d]
 - Bugfix: CToolbarMode is now considered to be a "basic mode".
 - Bugfix: ToolbarGridLayoutManager could throw exception because its cached data was outdated

[v1.1.1p8e]
 - API: Added support for perspectives in Common for toolbars
   
[Todo]
- Drop StackDockStation over Dockable and merge them