@@ -1,0 +1,53 @@
+/*
+ * Bibliothek - DockingFrames
+ * Library built on Java/Swing, allows the user to "drag and drop"
+ * panels containing any Swing-Component the developer likes to add.
+ * 
+ * Copyright (C) 2012 Herve Guillaume, Benjamin Sigg
+ * 
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2.1 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this library; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
+ * 
+ * Herve Guillaume
+ * rvguillaume@hotmail.com
+ * FR - France
+ *
+ * Benjamin Sigg
+ * benjamin_sigg@gmx.ch
+ * CH - Switzerland
+ */
+
+package bibliothek.gui.dock.toolbar;
+
+import bibliothek.gui.DockFrontend;
+import bibliothek.gui.dock.frontend.DockFrontendExtension;
+import bibliothek.gui.dock.station.toolbar.ToolbarContainerDockStationFactory;
+import bibliothek.gui.dock.station.toolbar.ToolbarDockStationFactory;
+import bibliothek.gui.dock.station.toolbar.ToolbarGroupDockStationFactory;
+import bibliothek.gui.dock.station.toolbar.ToolbarItemDockableFactory;
+
+public class ToolbarDockFrontendExtension implements DockFrontendExtension{
+	@Override
+	public void install( DockFrontend frontend ){
+		frontend.registerFactory( new ToolbarContainerDockStationFactory() );
+		frontend.registerFactory( new ToolbarGroupDockStationFactory() );
+		frontend.registerFactory( new ToolbarDockStationFactory() );
+		frontend.registerFactory( new ToolbarItemDockableFactory() );
+	}
+
+	@Override
+	public void uninstall( DockFrontend frontend ){
+		// ignore
+	}
+}
